<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:background="@drawable/screenbg">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
       android:layout_margin="5dp"
        android:orientation="vertical">


        <ImageView
            android:layout_width="match_parent"
            android:layout_height="298dp"
            android:src="@drawable/shop" />

        <TextView
            android:layout_width="409dp"
            android:layout_height="59dp"
            android:gravity="center"
            android:text="@string/byn_login"
            android:textColor="@color/colorRed"
            android:textSize="30dp" />
        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:id="@+id/useremailwrapper">
            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/enter_email"
                android:id="@+id/user_email"
                android:inputType="textEmailAddress"/>


        </android.support.design.widget.TextInputLayout>
        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:id="@+id/userpasswrapper">
            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/enter_password"
                android:id="@+id/user_password"
                android:inputType="numberPassword"/>


        </android.support.design.widget.TextInputLayout>
        <Button

            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/btnloginbg"
            android:text="@string/byn_login"
            android:textSize="20dp"
            
            android:id="@+id/login_btn"

            />
        <TextView
            android:layout_width="409dp"
            android:layout_height="59dp"
            android:gravity="center"
            android:text="or"
            android:textColor="@color/colorRed"
            android:textSize="30dp" />
        <Button
            android:id="@+id/btn_sign_up"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/btnsignupbg"

            android:textSize="20dp"
            android:text="New USER!Register here"/>
    </LinearLayout>

</LinearLayout>
